try to fix mobile layout issues v2

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,7 +16,7 @@
 
 html,
 body {
-  @apply text-slate-200;
+  @apply overscroll-none  text-slate-200;
 }
 
 :root {
